--- a/config/database.yml
+++ b/config/database.yml
@@ -79,7 +79,4 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
-  database: makerlink_production
-  username: makerlink
-  password: <%= ENV['makerlink_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
