--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
     "react-height": "^2.1.0",
+    "react-parallax": "^0.4.3",
     "react-redux": "^4.4.0",
     "react-router": "^2.0.0",
     "react-stripe-checkout": "^1.8.0",
