--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "flux": "^2.1.1",
     "fullcalendar": "^2.8.0",
     "history": "^2.0.1",
+    "md5": "^2.1.0",
     "moment": "^2.14.1",
     "react": "^0.14.7",
     "react-addons-linked-state-mixin": "^0.14.7",
     "react-bootstrap": "^0.28.3",
+    "react-date-picker": "^5.3.28",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.7",
